[gd_scene load_steps=5 format=3 uid="uid://6bcg7fwcl6mi"]

[ext_resource type="Script" uid="uid://bu6yn6ww7d7c8" path="res://source/common/entities/characters/character.gd" id="1_uqmoo"]
[ext_resource type="SpriteFrames" uid="uid://cxjdawwwo8gil" path="res://source/common/resources/builtin/sprite_frames/human_male_teen.tres" id="2_vbaud"]
[ext_resource type="PackedScene" uid="uid://dslec2qgwwig2" path="res://source/common/items/weapons/empty_hand/empty_hand.tscn" id="3_eddh2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3w1m3"]
size = Vector2(14, 6)

[node name="Character" type="CharacterBody2D"]
y_sort_enabled = true
texture_filter = 1
collision_mask = 6
script = ExtResource("1_uqmoo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = ExtResource("2_vbaud")
animation = &"idle_down"
speed_scale = 1.5
offset = Vector2(0, -30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_3w1m3")

[node name="HandOffset" type="Node2D" parent="."]
visible = false
position = Vector2(0, -10)

[node name="HandPivot" type="Node2D" parent="HandOffset"]

[node name="RightHandSpot" type="Node2D" parent="HandOffset/HandPivot"]
position = Vector2(15, 0)

[node name="EmptyHand" parent="HandOffset/HandPivot/RightHandSpot" instance=ExtResource("3_eddh2")]

[node name="LeftHandSpot" type="Node2D" parent="HandOffset/HandPivot"]
position = Vector2(-15, 0)

[node name="EmptyHand" parent="HandOffset/HandPivot/LeftHandSpot" instance=ExtResource("3_eddh2")]
